--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "yup": "^1.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "startapp": "react-scripts start",
+    "deploy": "react-scripts build",
+    "start": "npm run startapp",
+    "build": "npm run deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
